compiler/tests/fa/errors/toplevel_pub_func_not_at_end.salam
// انتظار: خطا۰۸۸
// زبان: فارسی
pub func a: ret 1 end

func b: ret 2 end

func main: end
